<resources>
    <string name="app_name">男衣橱</string>

    <string name="home">首页</string>
    <string name="single">单品</string>
    <string name="match">搭配</string>
    <string name="discovery">发现</string>
    <string name="mine">我的</string>

    <string name="home_discovery_title">吸睛发现</string>
    <string name="home_match_title">潮流搭配</string>
    <string name="home_single_title">今日精选</string>

    <string name="single_indicator_tops">上衣</string>
    <string name="single_indicator_pants">裤子</string>
    <string name="single_indicator_shoes">鞋子</string>
    <string name="single_indicator_accessory">配饰</string>

    <string name="single_tops_jacket">夹克</string>
    <string name="single_tops_fleece">卫衣</string>
    <string name="single_tops_sweater">毛衣</string>
    <string name="single_tops_down">羽绒服</string>
    <string name="single_tops_sport">运动服</string>
    <string name="single_tops_wind">风衣</string>
    <string name="single_tops_long_sleeved">长袖T恤</string>
    <string name="single_tops_long_sleeve">长袖衬衫</string>
    <string name="single_tops_chaqueta">牛仔外套</string>
    <string name="single_tops_short_sleeve">短袖衬衫</string>
    <string name="single_tops_short_sleeved">短袖T恤</string>

    <string name="single_pants_casual">休闲裤</string>
    <string name="single_pants_jeans">牛仔裤</string>
    <string name="single_pants_sport">运动裤</string>
    <string name="single_pants_pencil">小脚裤</string>
    <string name="single_pants_harem">哈伦裤</string>
    <string name="single_pants_cropped">九/七分裤</string>
    <string name="single_pants_short">短裤</string>

    <string name="single_shoes_board">板鞋</string>
    <string name="single_shoes_canvas">帆布鞋</string>
    <string name="single_shoes_sport">运动鞋</string>
    <string name="single_shoes_doug">豆豆鞋</string>
    <string name="single_shoes_high">高帮鞋</string>
    <string name="single_shoes_ugg">男靴</string>

    <string name="single_accessory_watch">手表</string>
    <string name="single_accessory_sunglasses">墨镜</string>
    <string name="single_accessory_belt">腰带</string>
    <string name="single_accessory_bracelet">手链</string>
    <string name="single_accessory_cap">帽子</string>
    <string name="single_accessory_tie">领带/领结</string>

    <string name="xiuxian">休闲</string>
    <string name="shangwu">商务</string>
    <string name="yundong">运动</string>
    <string name="jianyue">简约</string>
    <string name="fugu">复古</string>
    <string name="yinglun">英伦</string>
    <string name="rihan">日韩</string>
    <string name="jietou">街头</string>
    
    <string name="visitor">游客登录</string>
    <string name="favorite">我的收藏</string>
    <string name="feedback">我要反馈</string>
    <string name="settings">我的设置</string>
    
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="hint_input_phone">输入手机号码</string>
    <string name="hint_input_password">输入密码</string>
    <string name="user_protocol">用户协议</string>
    <string name="forget_password">忘记密码？</string>
    <string name="found_password">找回密码</string>

    <string name="user_info">用户信息</string>
    <string name="user_info_finish">完成</string>
    <string name="user_name">用户名</string>
    <string name="user_phone">手机号</string>
    <string name="sms_code">验证码</string>
    <string name="get_sms_code">获取验证码</string>

    <string name="user_feedback">用户反馈</string>
    <string name="contract_info">联系方式</string>
    <string name="hint_contract_info">QQ/Email/电话</string>
    <string name="hint_feedback">反馈内容</string>
    <string name="confirm">确定</string>

    <string name="setting">设置</string>
    <string name="modify_account_password">修改账户密码</string>
    <string name="about_male_ambry">关于男衣橱</string>
    <string name="quit_current_account">退出当前账户</string>

    <string name="modify_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确              认</string>
    <string name="hint_input_old_password">请输入旧密码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_reinput_new_password">请再次输入新密码</string>

    <string name="hint_please_input_11_phone">请输入11位手机号</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_sms_code">请输入验证码</string>

    <string name="loading">加载中…</string>
    <string name="network_anomaly">网络异常，请检查网络连接...</string>
    <string name="no_more_data">亲，没有更多数据了</string>

    <string name="about">关于</string>
</resources>
