<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/center_toolbar" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@mipmap/back" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@id/rl_toolbar"
        android:background="@drawable/bg_white_stroke_line_with_radius"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/user_phone"/>

            <EditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:hint="@string/hint_please_input_11_phone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/stroke_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="密    码"/>

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:hint="@string/hint_please_input_password"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/stroke_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/sms_code"/>

            <EditText
                android:id="@+id/et_register_sms_code"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:hint="@string/hint_please_input_sms_code"/>

            <TextView
                android:id="@+id/tv_sms_code"
                android:layout_width="60dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_verify"
                android:text="@string/get_sms_code"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_modify_password"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_blue_stroke_line"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginEnd="20dp"
        />
</RelativeLayout>