<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/center_toolbar" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/user_info_finish"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/avatar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_user_avatar"
        android:background="@drawable/bg_grey_stroke_line"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/tv_user_name"
            android:background="@color/white"
            android:singleLine="true"
            android:text="不会飞的猴"
            android:textAlignment="textEnd" />

        <View
            android:id="@+id/v_divide"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignLeft="@id/et_user_name"
            android:layout_below="@id/et_user_name"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/stroke_line" />

        <TextView
            android:id="@+id/tv_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_divide"
            android:text="@string/user_phone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_divide"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/tv_user_phone"
            android:background="@color/white"
            android:singleLine="true"
            android:textAlignment="textEnd" />
    </RelativeLayout>
</RelativeLayout>