<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/mine_head" />

    <RelativeLayout
        android:id="@+id/rl_mine_favorite"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/iv_mine_favorite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_mine_fav"/>

        <TextView
            android:id="@+id/tv_mine_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/mine_item_text_color"
            android:textSize="16sp"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/iv_mine_favorite"
            android:text="@string/favorite"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_goto_right"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            />

        <View
            android:layout_alignLeft="@id/tv_mine_favorite"
            android:layout_width="match_parent"
            android:background="@color/light_grey"
            android:layout_alignParentBottom="true"
            android:layout_height="0.3dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_mine_feedback"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/iv_mine_feedback"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_mine_suggest"/>

        <TextView
            android:id="@+id/tv_mine_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/mine_item_text_color"
            android:textSize="16sp"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/iv_mine_feedback"
            android:text="@string/feedback"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_goto_right"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_mine_settings"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/iv_mine_settings"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_mine_setting"/>

        <TextView
            android:id="@+id/tv_mine_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/mine_item_text_color"
            android:textSize="16sp"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/iv_mine_settings"
            android:text="@string/settings"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_goto_right"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            />

    </RelativeLayout>
</LinearLayout>